--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "atom-of-thoughts",
+  "name": "@jeongsk/atom-of-thoughts",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -25,5 +25,6 @@
   "devDependencies": {
     "@types/node": "^22.13.13",
     "typescript": "^5.8.2"
-  }
+  },
+  "packageManager": "pnpm@9.15.1+sha512.1acb565e6193efbebda772702950469150cf12bcc764262e7587e71d19dc98a423dff9536e57ea44c49bdf790ff694e83c27be5faa23d67e0c033b583be4bfcf"
 }
