--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@jeongsk/atom-of-thoughts",
+  "name": "mcp-atom-of-thoughts",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "type": "module",
   "bin": {
-    "atom-of-thoughts": "./build/index.js"
+    "atom-of-thoughts": "build/index.js"
   },
   "scripts": {
     "build": "tsc && chmod 755 build/index.js",
